# 18272-Project

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  random.txt  utest-imgaos.cpp
avignon-ftests/: build.sh
avignon-tests/: README.md  resize-stat.sh
common/: CMakeLists.txt  binaryio.cpp  binaryio.hpp  intensityscaling.cpp  intensityscaling.h  intensityscaling.hpp  progargs.cpp  progargs.hpp  utility.cpp  utility.hpp
expected-output/: deer-small.cppm
expected-output/resize/: big16-2.ppm  deer-large-100.ppm  deer-large-1000.ppm  deer-small-100.ppm  deer-small-1000.ppm  lake-large-100.ppm  lake-large-1000.ppm  lake-small-100.ppm
ftest-aos/: CMakeLists.txt  README.md  aos_ftest.sh  aos_power.sh  aos_stat.sh  aossize_ftest.sh  config.sh  resize_ftests.cpp  runcases.sh
ftest-build/: README.md  build.sh
ftest-common/: ftest-maxlevel.sh
ftest-soa/: CMakeLists.txt  README.md  resize_ftests.cpp  soa_ftest.sh  soa_power.sh  soa_stat.sh
imgaos/: CMakeLists.txt  KDTree.cpp  KDTree.hpp  aoscommon.cpp  aoscommon.hpp  aoscompress.cpp  aoscompress.hpp  aosinfrequentcolor.cpp  aosinfrequentcolor.hpp  aossize.cpp  aossize.hpp  imageaos.cpp  imageaos.hpp
imgsoa/: CMakeLists.txt  imagesoa.cpp  imagesoa.hpp  soacommon.cpp  soacommon.hpp  soacompress.cpp  soacompress.hpp  soainfrequentcolor.cpp  soainfrequentcolor.hpp  soasize.cpp  soasize.hpp
imtool-aos/: CMakeLists.txt  main.cpp
imtool-soa/: CMakeLists.txt  main.cpp
test-data/: big16-4.ppm  lake-small-1000.ppm  small8-2.ppm  small8-4.ppm  test1.ppm  test16.ppm  test8.ppm
test-data/expected/: resize16.ppm
utest-common/: CMakeLists.txt  intensityscaling_utest.cpp  progargs_utest.cpp  utest-helpers.cpp  utest-helpers.hpp  utility_utest.cpp
utest-imgaos/: CMakeLists.txt  KDTree_utest.cpp  aoscompress_utest.cpp  aosinfrequentcolor_utest.cpp  aossize_utest.cpp  imageaos_utest.cpp
utest-imgsoa/: CMakeLists.txt  imagesoa_utest.cpp  soacompress_utest.cpp  soainfrequentcolor_utest.cpp  soasize_utest.cpp
